# redfox

./: .env  .env.example  .gitignore  DEPLOYMENT.md  docker-compose.yml  renew-ssl.sh  setup-ssl.sh
accounting/dynamic_accounts_report/: __manifest__.py
accounting/payment_voucher_template/: __manifest__.py
addons/auth_session_timeout/: README.rst
addons/auto_logout_idle_user_odoo/: README.rst
addons/basic_hms/: __manifest__.py  readme.txt
addons/bb_web_company_favicon_logo/: __manifest__.py
addons/custom_report_layout/: __manifest__.py
addons/disable_odoo_online/: README.rst  __manifest__.py
addons/dms/: README.rst  __manifest__.py
addons/dms_auto_classification/: README.rst  __manifest__.py
addons/dms_field/: README.rst  __manifest__.py
addons/dms_field_auto_classification/: README.rst  __manifest__.py
addons/dms_user_role/: README.rst  __manifest__.py
addons/hr_dms_field/: README.rst  __manifest__.py
addons/hr_performance_360/: __manifest__.py
addons/inventory_validations/: __manifest__.py
addons/kolpolok_custom_title_and_favicon/: __manifest__.py
addons/main_dashboard/: __manifest__.py
addons/payroll_salary_difference/: __manifest__.py
addons/portal_job_posts/: __manifest__.py
addons/portal_odoo_debranding/: README.rst  __manifest__.py
addons/remove_odoo_enterprise/: README.rst  (+1 more)
addons/setup/_metapackage/: pyproject.toml
config/: odoo.conf
etc/: odoo.conf
inv_purchase_sales/: extract_rfp_chatter.py  rfp_chatter.json
nginx/: odoo-http-only.conf  odoo-ssl.conf  odoo.conf
web_enterprise/: __init__22.py  __manifest__.py
(+2394 files in other folders)
